codepkg/objects/User_Registration__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>App Approved</fullName>
                </value>
                <value>
                    <fullName>App Requested</fullName>
                </value>
                <value>
                    <fullName>App Rejected</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Verification Pending</fullName>
                </value>
                <value>
                    <fullName>Password Reset</fullName>
                </value>
                <value>
                    <fullName>Pending for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Additional Agency Requested</fullName>
                </value>
                <value>
                    <fullName>Agency Change Requested</fullName>
                </value>
                <value>
                    <fullName>Access Level Change Requested</fullName>
                </value>
                <value>
                    <fullName>Additional Agency Approved</fullName>
                </value>
                <value>
                    <fullName>Additional Agency Rejected</fullName>
                </value>
                <value>
                    <fullName>Access Level Change Rejected</fullName>
                </value>
                <value>
                    <fullName>Access Level Change Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Language__c</fullName>
        <label>Translation Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Espanol</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tribal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tribal</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Entity_Type__c</field>
                <operation>equals</operation>
                <value>Tribal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>User Registrations (Tribal)</relationshipLabel>
        <relationshipName>User_Registrations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Household_Number__c</fullName>
        <description>Unique Household Number generated for the Account When the very first member has registered to HH_Community.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique Household Number generated for the Account When the very first member has registered to HH_Community.</inlineHelpText>
        <label>Unique Household Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>FEMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Registration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>County__c</columns>
        <columns>Status__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>State_Agency__c</columns>
        <columns>Special_District__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>County__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>App Approved</value>
        </filters>
        <label>Approved</label>
    </listViews>
    <listViews>
        <fullName>HH_San_Deigo_County_Community_Approver_User_Registration</fullName>
        <filterScope>Queue</filterScope>
        <label>CWMP San Deigo County Community Approver</label>
        <queue>HH_San_Deigo_County_Community_Approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HH_Shasta_County_Community_Approver_User_Registration</fullName>
        <filterScope>Queue</filterScope>
        <label>CWMP Shasta County Community Approver</label>
        <queue>HH_Shasta_County_Community_Approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MARS_Pending_Requests</fullName>
        <columns>NAME</columns>
        <columns>Fire_Agency__c</columns>
        <columns>MARS_Paying_Entity__c</columns>
        <columns>Access_Level__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>User_Registration__c.MARS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>App Requested,Additional Agency Requested,Access Level Change Requested</value>
        </filters>
        <label>MARS Pending Requests</label>
    </listViews>
    <listViews>
        <fullName>MARS_User_Request_Approval_User_Registration</fullName>
        <filterScope>Queue</filterScope>
        <label>MARS User Request Approval</label>
        <queue>MARS_User_Request_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_For_Approval</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>County__c</columns>
        <columns>Status__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending for Approval</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>App Requested</value>
        </filters>
        <label>Pending For Approval</label>
    </listViews>
    <listViews>
        <fullName>Rejected</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>App Rejected</value>
        </filters>
        <label>Rejected</label>
    </listViews>
    <listViews>
        <fullName>SOC_OPS_Government_User_Registration</fullName>
        <filterScope>Queue</filterScope>
        <label>PHOS_SOC_OPS_Government</label>
        <queue>PHOS_SOC_OPS_Government</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SOC_OPS_User_Registration</fullName>
        <filterScope>Queue</filterScope>
        <label>PHOS_SOC_OPS_Non_Government</label>
        <queue>PHOS_SOC_OPS_Non_Government</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Verification_Pending</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>County__c</columns>
        <columns>Status__c</columns>
        <columns>Entity_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Verification Pending</value>
        </filters>
        <label>Verification Pending</label>
    </listViews>
    <nameField>
        <displayFormat>UR-{0}</displayFormat>
        <label>User Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Registrations</pluralLabel>
    <recordTypes>
        <fullName>HH_Registration</fullName>
        <active>true</active>
        <label>HH Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>HMA</fullName>
        <active>true</active>
        <label>HMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>MARS</fullName>
        <active>true</active>
        <description>This recordtype is used for MARS Application access requests</description>
        <label>MARS</label>
    </recordTypes>
    <recordTypes>
        <fullName>PHOS</fullName>
        <active>true</active>
        <label>PHOS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <label>Registration</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>